# V1_Transformer

./: .gitignore  2026-04-13_edits.md  2026-04-14_edits.md  2026-04-15_edits.md  2026-04-18_edits.md  2026-04-19_edits.md  2026-04-20_edits.md  2026-04-24_edits.md  2026-04-30_edits.md  2026-05-01_edits.md  2026-05-02_edits.md  2026-05-02_vfe_jepa_analysis.md  2026-05-03_edits.md  2026-05-05_edits.md  2026-05-06_edits.md  2026-05-07_edits.md  2026-05-07_holonomy_audit.md  2026-05-08_edits.md  2026-05-09_edits.md  ACTIVE_IDEA.md  AUDIT_REPORT.md  CLAUDE.md  CODEBASE_AUDIT.md  FLAT_BUNDLE_HYPOTHESES.md  FLAT_BUNDLE_IMPLEMENTATION_PLAN.md  GRAND_SCHEME.md  K_scaling_experimental_plan.md  NUMERICAL_STABILITY.md  PLAN.md  PPL_PLATEAU_ANALYSIS.md  README.md  REFACTOR_PLAN.md  REVIEW.md  REVIEW_2026_03_20.md  REVIEW_GL(K)_attention.md  SEPARATION_PLAN.md  SKILLS_EVALUATION.md  STREAMLINE_PLAN.md  audit_deep_math_2026-04-11.md  claude.md  (+30 more)
.claude/: settings.json
Attention/: 2026-05-09_edits.md  2026-05-10_edits.md  2026-05-12_edits.md  2026-05-13_edits.md  2026-05-15_edits.md  2026-05-16_edits.md  2026-05-17_edits.md  2026-05-18_edits.md  2026-05-19_edits.md  2026-05-20_edits.md  2026-05-21_edits.md  2026-05-24_edits.md  EMPIRICAL_COMPARISONS.md  GL(K)_attention.tex  GL(K)_supplementary.tex  Lahav_cover_letter.md  MANUSCRIPT_REVIEW.md  Participatory_it_from_bit.tex  REVIEW_2026-05-18.md  belief_inertia_unified.tex  jmlr_coverletter.tex  lorentzian_signature_from_epistemic_causality.md  nontrivial_omega_transformer_derivation.md  option_a_joint_generative_model_route.md  (+5 more)
(+1849 files in other folders)
