[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gauge-transformer"
version = "0.1.0"
description = "Gauge-theoretic transformer with variational free energy"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "pytorch-lightning>=2.2.0",
    "torchmetrics>=1.0.0",
    "numpy>=1.24.0",
    "tiktoken>=0.5.0",
    "datasets>=2.14.0",
    "tqdm>=4.65.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
wandb = ["wandb>=0.16.0"]
transformers = ["transformers>=4.35.0"]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
]
all = [
    "gauge-transformer[wandb,transformers,viz]",
    "scikit-learn>=1.3.0",
    "umap-learn>=0.5.0",
    "shap>=0.44.0",
    "pymc>=5.10.0",
    "networkx>=3.2.0",
]

[tool.setuptools.packages.find]
include = ["transformer*", "math_utils*"]
